--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm rebuild better-sqlite3",
+    "deploy": "npm install && npm run build && npm start"
   },
   "keywords": [],
   "author": "",
